# Chatroom

./: .gitignore  CMakeLists.txt  Client.cpp  Client.h  Common.cpp  Common.h  Friendlist.cpp  Login.cpp  README.md  Server.cpp  Server.h  Talk.cpp  friendlist  list.txt  main.cpp  makefile  mysql_create  test2
include/mysqlite3/: demo.cpp  mysqlite3.cpp  mysqlite3.h
